@@ -40,7 +40,10 @@ SecureServ Module for NeoStats Changelog.
  - An option to treat channel messages as PM Messages when checking against viri list. its a IGOTLOTSOFCPU option! (F)
  - Fix bugID# 121. /msg secureserv update fails when autoupdate is disabled (F)
  - Fix a namespace clash with NeoStats exclude functions and SecureServ Exclude Funtions (F)
-
+ - Added support for upcomming netsplit detection in the Core Code (F)
+ - if we are using SecureServ netsplit detection (and not the NeoStats 2.5.15 method) and 
+   we continue to get netsplit users from a particular server (10 in a row) send a message 
+   to the channel warning about possible time issues (F) 
 
 1.0 - Fish (F) and Mark (M) - 22 Aug, 2003
  - Fixed a problem with users signing off while NeoStats was still booting. (F)
